# unreal-mcp

./: .env.example  .gitignore  AGENTS.md  FEATURE_STATUS.md  LICENSE  README.md  config.example.bat  config.example.ps1  start_mcp_server.bat  start_mcp_server.ps1
Docs/: BT_BugFix_Prompt.md  BugFix_AddWidgetFunction_EntryNode_Prompt.md  BugFix_BuildError_20251222_Prompt.md  CHANGELOG.md  CreateUMGWidget_Improvement.md  CustomBTNodeClass_Support_Prompt.md  ERROR_CODES.md  EnhancedInput_BlueprintIntegration_Prompt.md  IMPLEMENTATION_SUMMARY.md  NodeManipulationTools_Prompt.md  NodeTools_MathComparison_Fix_Prompt.md  ProjectContext_Fix_Prompt.md  SessionStart_Prompt.md  UMGPhase1_DesignerOperations_Prompt.md  UMGPhase2_Handover_Prompt.md  UMGPhase2_VariableFunction_Prompt.md  UMGPhase3_AnimationTrack_Prompt.md  UMGPhase3_Animation_Prompt.md  UMGPhase3_ArrayVariable_Prompt.md  UMGPhase3_Continue_Prompt.md  UMGPhase3_GetWidgetAnimations_Prompt.md  UMGPhase3_GraphNodes_Prompt.md  UMGPhase3_Handover_Prompt.md  UMGPhase3_RenderTransform_Prompt.md  UMGPhase4A_Fix_Prompt.md  UMGPhase4A_Prompt.md  UMGPhase4B_Prompt.md  UMGPhase4_AdvancedFeatures_Prompt.md
Docs/ProjectContext/: UMGPhase1_Completion.md
Docs/Prompts/: BT_MCP_Fixes_Prompt.md
Docs/Tools/: README.md  node_tools.md  project_tools.md
MCPGameProject/: MCPGameProject.uproject
MCPGameProject/Source/: MCPGameProjectEditor.Target.cs
Python/: README.md  pyproject.toml  unreal_mcp_server.py
Python/tests/: README.md  conftest.py  run_tests.py  smoke_test.py  test_blueprints.py  test_framework.py  test_umg_widgets.py
Python/tools/: ai_tools.py  blueprint_tools.py  editor_tools.py  error_codes.py  gas_tools.py  knowledge_tools.py  node_tools.py  project_tools.py  rag_tools.py  umg_tools.py
(+50 files in other folders)
